cpu now makes its turns right after player attacks. cpu attacks seem to register and display. still have to solve ship placement overlapping problem and set victory conditions

--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,16 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 75%;
     width: 75%;
+}
+
+.titles{
+    display: flex;
+    gap: 500px;
 }
 
 .gameboards{
